--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games</title>
     <style>
+        @font-face {
+            font-family: Montserrat;
+            src: url("./fonts/Montserrat.ttf");
+        }
+        *{
+            font-family: Montserrat;
+        }
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
