temp remove search bar for fix

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 <body>
     <div class="head-content">
         <h2>Important: These are not official publications from the game developers. After testing the game, please go purchase the game from the developer in question.</h2>
-        <div class="search-container">
+        <!-- <div class="search-container">
             <input type="text" id="search" onkeyup="searchGrid()" placeholder="Rechercher...">
-        </div>
+        </div> -->
     </div>
     <div class="grid-container">
     </div>
