Fix some bug + add load button (antilag)

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        .bottom-content{
+            margin: 0 15rem 0 15rem;
+        }
+        .loadmore-btn{
+            margin-bottom: 20px;
+            width: 100%;
+            outline: none;
+            padding: 12px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -87,5 +99,9 @@
     </div>
     <div class="grid-container">
     </div>
+    <div class="bottom-content">
+        <button class="loadmore-btn" onclick="LoadNext()">Load More</button>
+    </div>
+    
 </body>
 </html>
