add Spreadsheet version

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <body>
     <div class="head-content">
         <h2>Important: These are not official publications from the game developers. After testing the game, please go purchase the game from the developer in question.</h2>
+        <a href="https://bit.ly/getvideogames">Spreadsheet version</a>
         <!-- <div class="search-container">
             <input type="text" id="search" onkeyup="searchGrid()" placeholder="Rechercher...">
         </div> -->
