--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         .grid-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 15vw));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 15rem));
             gap: 20px;
             padding: 20px;
             max-width: 80vw;
@@ -105,7 +105,7 @@
     <div class="grid-container">
     </div>
     <div class="bottom-content">
-        <button class="loadmore-btn" onclick="LoadNext()">Load More</button>
+        <button class="loadmore-btn">Load More</button>
     </div>
     
 </body>
