--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             overflow-y: scroll;
             overflow-x: hidden;
             margin-bottom: 2vh;
+            min-width: 80vw;
+            
         }
         .grid-container {
             display: grid;
@@ -38,6 +40,7 @@
             padding: 20px;
             max-width: 80vw;
             width: 100%;
+            justify-content: center;
         }
         .grid-item {
             background: white;
