--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     </div>
     <div class="head-content">
         <h2>Important: These are not official publications from the game developers. After testing the game, please go purchase the game from the developer in question.</h2>
+        <p>Last update : 03/05/25</p>
         <a href="https://bit.ly/getvideogames">Spreadsheet version</a>
         <a class="add-game" href="https://forms.gle/uYAUARkPFgYebaCb6">Contact : Add game</a>
         <div class="search-container">
